--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="inner">
 						<header>
 							<p>A fluid, responsive website prototyped by <a href="https://github.com/eshack94">eshack94</a></p>
-							<h2>Expect Excellence</h2>
+							<h3>Expect excellence.</h3>
 						</header>
 					</div>
 				</article>
@@ -43,7 +43,7 @@
 					<div class="inner">
 						<header>
 							<p>Lorem ipsum dolor sit amet nullam feugiat</p>
-							<h2>Dive deep</h2>
+							<h3>Dive deep.</h3>
 						</header>
 					</div>
 				</article>
@@ -52,7 +52,7 @@
 					<div class="inner">
 						<header>
 							<p>Sed cursus aliuam veroeros lorem ipsum nullam</p>
-							<h2>Tempus dolor</h2>
+							<h3>Think thoroughly.</h3>
 						</header>
 					</div>
 				</article>
@@ -61,7 +61,7 @@
 					<div class="inner">
 						<header>
 							<p>Adipiscing lorem ipsum feugiat sed phasellus consequat</p>
-							<h2>Etiam feugiat</h2>
+							<h3>Create consistently.</h3>
 						</header>
 					</div>
 				</article>
@@ -70,7 +70,7 @@
 					<div class="inner">
 						<header>
 							<p>Ipsum dolor sed magna veroeros lorem ipsum</p>
-							<h2>Lorem adipiscing</h2>
+							<h3>Live to learn.</h3>
 						</header>
 					</div>
 				</article>
